<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="414dp"
        android:layout_height="70dp"
        android:background="@color/black_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:text="@string/create_Task"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTaskField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_text"
        app:boxBackgroundColor="@color/black_dark"
        android:textColorHint="@color/white"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTaskText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pointsTaskField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/points_text"
        app:boxBackgroundColor="@color/black_dark"
        android:textColorHint="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTaskField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pointsTaskText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/starsTaskField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/stars_Text"
        app:boxBackgroundColor="@color/black_dark"
        android:textColorHint="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsTaskField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/starsTaskText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonTareaGuardar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/green"
        android:text="@string/guardar_Tarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starsTaskField" />

    <Button
        android:id="@+id/botonTareaCancelar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancelar_tarea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonTareaGuardar"
        app:layout_constraintVertical_bias="0.596" />


</androidx.constraintlayout.widget.ConstraintLayout>